@@ -28,6 +28,9 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.7.x
 
+Fixes:
+- start_dearpygui: fixed primary window not found crash #523
+
 ------------------------------------------------------------------------
  VERSION 0.6.151
 ------------------------------------------------------------------------
